--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,51 +1,93 @@
-header, body, footer {
+body, #nav, #bio {
     width: 960px;
+    
+}
+h2 {
+    padding: 10px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
+html, body {
+    height: 100%;
 }
 a:link, a:visited {
     color: #777777;
     text-decoration: none;
 }
+
+header {
+    background-color: #ffffff;
+    padding-right: 20px;
+    margin-bottom: 20px;
+    border-bottom: solid;
+    border-color: #cccccc;
+    border-width: 5px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
 #name {
     padding: 10px;
     background-color: #4aaaa5;
     color: white;
     float: left;
-    margin-left: 60px;
-    
+    margin: auto;
+    margin-left: 160px;
 }
 #nav {
     padding-top: 40px;
+    padding-right: 40px;
+    margin: auto;
     text-align: right;
-    font-family: 'Georgia', Times, Times New Roman, serif;
     color: #777777;
     background-color: #ffffff;
     border-color: #cccccc;
-
+    padding-bottom: 40px;
 }
 
 #bio{
+    clear: both;
+    margin: auto;
     Padding: 50px;
+    background-color: #ffffff;
+    border: solid;
+    border-width: 2px;
+    border-color: #cccccc;
+    flex: 1 0 auto;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 body{
-    margin-left: 60px; 
-    align-content: center;
-    /*font-family: 'Arial', 'Helvetica Neue', Arial, Helvetica, sans-serif;
-    width: 960px; */
-    background-image: url('assets/images/dust_scratches.jpg');
+    display: flex;
+    flex-direction: column;
+    background-image: url("../images/dust_scratches.jpg");
+    overflow: hidden;
+    width: 100%;
+    margin: 0 auto 0 auto;
+    color: #777777;
 }
-.vl {
-    border-left: 6px solid black;
-    height: 10px;
-}
-#upperlip{
-    padding:10;
-    background-color: #4aaaa5;
-    margin-top: 10px;
-}
+
 .footer{
     background-color: #666666;
+    color: #cccccc;
     text-align: center;
-    padding: 40px;
-    margin: 0px;
+    padding: 20px;
+    margin-top: 20px;
+    flex-shrink: 0;
+    border-top: solid;
+    border-color: #4aaaa5;
+    border-width: 5px;
+}
+img {
+  border-radius: 33%;
+  -webkit-transition: -webkit-transform .8s ease-in-out;
+  -ms-transform: -ms-transform .8s ease-in-out;
+  -o-transform: -o-transform .8s ease-in-out;
+    -moz-transition: -moz-transform .8s ease-in-out;
+          transition:         transform .8s ease-in-out;
+}
+img:hover {
+  -webkit-transform: rotate(360deg);
+  -ms-transform: rotate(360deg);
+  -o-transform: rotate(360);
+  -moz-transform: rotate(360deg);
+          transform: rotate(360deg);
 }
