added the main body of each page to the style sheet so that they are more similar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,7 +43,7 @@ header {
     padding-bottom: 40px;
 }
 
-#bio{
+#bio, #projects, #contact{
     clear: both;
     margin: auto;
     Padding: 50px;
