--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,7 +51,7 @@ header {
 #bio, #projects, #contact{
     clear: both;
     margin: auto;
-    Padding: 50px;
+    Padding: 25px;
     background-color: #ffffff;
     border: solid;
     border-width: 2px;
@@ -59,16 +59,34 @@ header {
     flex: 1 0 auto;
     font-family: Arial, Helvetica, sans-serif;
 }
-#project1, #project3 {
-    z-index: 2;
-    float: left;
-}
-#project1, #project2, #project3, #project4, #project5{
+.image1, .image2, .image3, .image4, .image5{
     position: relative;
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-top: 20px;
+    float: left;
+    
+}
+
+.image1, .image3, .image5 {
+    margin-right: 10px;
+    clear: both;
+}
+
+h3 {
+    top: 40%;
+    left: 0px;
+    right: 0px;
+    padding: 5px;
+    position: absolute;
+    text-align: center;
     background-color: #4aaaa5;
     color: #ffffff;
-} 
-
+    float: left;
+    width: 90%;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    
+}
 
 .resizedtextbox, textarea{
     clear: both;
@@ -85,6 +103,7 @@ textarea{
 }
 input[type="submit"] {
     background-color: #4aaaa5;
+    margin-top: 10px;
     padding: 10px;
     font-family: Georgia, 'Times New Roman', Times, serif;
     border: 0;
